--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "nodemon": "^2.0.20",
-    "socket.io": "^4.5.2"
+    "socket.io": "^4.5.2",
     "express": "^4.18.1"
   }
 }
