--- a/server/package.json
+++ b/server/package.json
@@ -2,18 +2,18 @@
   "name": "server",
   "version": "1.0.0",
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "DEBUG=* nodemon index.js"
+    "dev": "DEBUG=* nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "debug": "^4.3.4",
+    "express": "^4.18.1",
     "nodemon": "^2.0.20",
-    "socket.io": "^4.5.2",
-    "express": "^4.18.1"
+    "socket.io": "^4.5.2"
   }
 }
