--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@socket.io/postgres-adapter": "^0.3.0",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "express": "^4.18.1",
     "nodemon": "^2.0.20",
+    "pg": "^8.8.0",
     "socket.io": "^4.5.2"
   }
 }
