--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@socket.io/postgres-adapter": "^0.3.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.6",
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
