--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
+    "postman-to-markdown": "^1.0.7",
     "socket.io": "^4.5.2"
   }
 }
